<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>adi_meta</name>
  <version>0.0.0</version>
  <description>Streamlined ROS2 support for Analog Devices' engineering solutions.</description>
  <maintainer email="Adrian.Stanea@analog.com">Adrian Stanea</maintainer>
  <license>Apache License, Version 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS2 packages offered by Analog Devices -->
  <exec_depend>adi_iio</exec_depend>
  <exec_depend>adi_imu</exec_depend>
  <exec_depend>adi_tmcl</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_xmllint</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <rosdoc2>rosdoc2.yaml</rosdoc2>
  </export>
</package>
